1.2 fixed scrollbar issue, added page counter
git-svn-id: https://plugins.svn.wordpress.org/pdf-embedder/trunk@1124603 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/pdfemb-embed-pdf.css
+++ b/css/pdfemb-embed-pdf.css
@@ -4,10 +4,16 @@ div.pdfemb-viewer {
 	line-height: 1;
 	margin: 0px;
 	padding: 0px;
+	position: relative;
+}
+
+div.pdfemb-loadingmsg {
+	text-align: center;
+	padding: 5px;
 }
 
 div.pdfemb-viewer canvas {
-	position: relative;
+	
 	top: 0px; 
 	bottom: 0px;
 	margin: 0px;
@@ -16,27 +22,30 @@ div.pdfemb-viewer canvas {
 
 div.pdfemb-toolbar {
 	padding: 0px;
-	display: none;
-	
-    height: 36px; 
+	margin: 0px;
+	border: none;
+	z-index: 10;
+	 
     background-color: grey; 
-    z-index: 10;
-    padding: 0px;
+    width: 100%;
+    
+    display: none;	
 }
 
 div.pdfemb-toolbar-top {
-
+	position: absolute;
+	top: 0px;
+	left: 0px;
 }
 
 div.pdfemb-toolbar-bottom {
-	position: relative;
-	bottom: 34px;
+	position: absolute;
+	bottom: 0px;
 	left: 0px;
-	margin-bottom: -36px;
 }
 
 div.pdfemb-toolbar button {
-	margin: 6px 0 0 10px;
+	margin: 6px 0 6px 10px;
 	border: 1px solid #ccc;
 	border-radius: 3px;
 	height: 25px;
@@ -57,9 +66,12 @@ div.pdfemb-toolbar button {
 	display: inline-block;
 }
 
-div.pdfemb-toolbar span {
-	margin: 6px 0 0 10px;
-	height: 25px;
+div.pdfemb-toolbar button.pdfemb-btndisabled {
+	color: lightGray;
+}
+
+div.pdfemb-toolbar div {
+	margin: 6px 0 6px 10px;
 	font-family: sans-serif;
 	font-size: 10px;
 	padding: 5px;
@@ -71,7 +83,7 @@ div.pdfemb-toolbar span {
 	text-indent: 0px;
 	text-shadow: none;
 	font-weight: normal;
-	display: inline-block;
+	display: inline;
 	color: lightgray;
 }
 
